@@ -544,3 +544,5 @@
 	  flash_eraseall NSH command  (Ken Pettit, 2013-5-1).
 	* apps/examples/flash_test and apps/examples/smart_test:  Add tests of
 	  the SMART block driver and file system  (Ken Pettit, 2013-5-1).
+	* apps/examples/mtdpart:  Extended to the test.  The original test
+	  coverage was superficial (2013-5-3).
